<resources>
    <string name="app_name">midasit</string>
    <string name="home">홈</string>
    <string name="menu">메뉴</string>
    <string name="mypage">내정보</string>
    <string name="notification">알림</string>
    <string name="shopping_cart">장바구니</string>
    <string name="size">사이즈</string>
    <string name="size_tall">Tall</string>
    <string name="size_venti">Venti</string>
    <string name="size_grande">Grande</string>
    <string name="ice">아이스</string>
    <string name="syrup">시럽</string>
    <string name="whipping">휘핑 크림</string>
    <string name="count">수량</string>
    <string name="pay_now">즉시 결제</string>
    <string name="store_shopping_cart">장바구니 담기</string>
    <string name="password">비밀번호</string>
    <string name="employee_number">사원 번호</string>
    <string name="signin">로그인</string>
    <string name="failed_to_signin">로그인을 실패하였습니다.</string>
    <string name="incorrect_password">사원 번호 및 비밀번호가 올바르지 않습니다.</string>
    <string name="menu_management">메뉴 관리</string>
    <string name="user_management">회원 관리</string>
    <string name="reservation_management">예약 관리</string>
    <string name="coffee">커피</string>
    <string name="tea">차</string>
    <string name="beverage">음료</string>
    <string name="more">더 보기</string>
    <string name="order">주문하기</string>
    <string name="completed">완료됨</string>
    <string name="fmt_order_username">%1$s님의 주문</string>
    <string name="fmt_order_detail">%1$s %2$d개</string>
</resources>
